--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
 dgShowLocalGraph=false
-dgShowInlineTitle=false
+dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=false
