--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ SITE_NAME_HEADER=Garten von Dennis
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
-dgShowLocalGraph=false
+dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=false
