--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ BASE_THEME=light
 SITE_NAME_HEADER=Garten von Dennis
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=true
